# cuda-rmsnorm

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
benchmarks/: benchmark.py  profile.sh  profile_v15.py
deploy/: deploy.sh  remote_build.sh  run_tests.sh
python/rmsnorm/: __init__.py  module.py
scripts/: generate_report.py
src/bindings/: pybind_rmsnorm.cpp
src/include/: rmsnorm.h
src/kernels/: rmsnorm_baseline.cu  rmsnorm_common.h  rmsnorm_v10_chunk.cu  rmsnorm_v11_gridmap.cu  rmsnorm_v12_fused.cu  rmsnorm_v13_autotune.cu  rmsnorm_v14_cudagraph.cu  rmsnorm_v15_vec_unroll.cu  rmsnorm_v16_vec_persistent.cu  rmsnorm_v18_dynamic_block.cu  rmsnorm_v19_vec_unroll2.cu  rmsnorm_v1_block_reduce.cu  rmsnorm_v20_half2.cu  rmsnorm_v21_persistent.cu  rmsnorm_v22_persistent2.cu  rmsnorm_v23_warp_persistent.cu  rmsnorm_v25_best.cu  rmsnorm_v26_smem_input.cu  rmsnorm_v27_half2.cu  rmsnorm_v28_vec_half2.cu  rmsnorm_v29_const_dim.cu  rmsnorm_v2_warp_shuffle.cu  rmsnorm_v3_vectorized.cu  rmsnorm_v4_persistent.cu  rmsnorm_v5_align.cu  rmsnorm_v6_unroll.cu  rmsnorm_v7_doublebuf.cu  rmsnorm_v8_warp_spec.cu  rmsnorm_v9_tiling.cu
tests/: test_rmsnorm.py
